# hnsw-mch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  launch.vs.json
app/: app.py  create_symlinks.ps1  local_debug  local_release
benchmarks/: 10000.txt  100000.txt  30000.txt  sift.txt
datasets/: README.md
exec/: README.md
measurements/: README.md  example_run.txt  measurement_release_no-progress_x64_128_10000_1000_0_184_0_0_graph_100_100_20_40_0.330_0_0_0.txt  measurement_release_progress_x64_128_10000_1000_0_184_0_0_graph_100_100_20_40_0.330_0_0_0.txt  measurement_release_progress_x64_128_10000_1000_0_184_0_0_graph_10_100_20_40_0.330_0_0_0.txt  measurement_release_progress_x64_128_10000_1000_0_184_1_1_graph_10_100_20_40_0.330_0_0_0.txt  measurement_release_progress_x64_128_1000_100_0_184_0_0_graph_10_100_20_40_0.330_0_0_0.txt  measurement_release_progress_x64_128_1000_100_0_184_1_1_graph_10_100_20_40_0.330_0_0_0.txt  measurement_release_progress_x64_128_15000_1500_0_184_0_0_graph_150_100_20_40_0.330_0_0_0.txt  measurement_release_progress_x64_128_20000_2000_0_184_0_0_graph_200_100_20_40_0.330_0_0_0.txt  measurement_release_progress_x64_128_2000_200_0_184_0_0_graph_10_100_20_40_0.330_0_0_0.txt  measurement_release_progress_x64_128_2000_200_0_184_1_1_graph_10_100_20_40_0.330_0_0_0.txt  measurement_release_progress_x64_128_25000_2500_0_184_0_0_graph_250_100_20_40_0.330_0_0_0.txt  measurement_release_progress_x64_128_30000_3000_0_184_0_0_graph_300_100_20_40_0.330_0_0_0.txt  measurement_release_progress_x64_128_3000_300_0_184_0_0_graph_10_100_20_40_0.330_0_0_0.txt  (+14 more)
(+120 files in other folders)
